<resources>
    <string name="app_name">Movie Search</string>
    <string name="button_search">Search</string>
    <string name="text_search_by_title">Search By Movie Title</string>
    <string name="alert_movie_not_found">Couldn\'t find the movie</string>
    <string name="alert_movie_detail_not_found">Couldn\'t find the movie detail</string>
    <string name="movie_title">Movie Title</string>
    <string name="type">Type:</string>
    <string name="imdb_rating">Imdb Rating</string>
    <string name="google_url">http://www.google.com/</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="year">Year</string>
    <string name="released">Released</string>
    <string name="runtime">Runtime</string>
    <string name="actors">Actors</string>
    <string name="writer">Writer</string>
    <string name="plot">Plot</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="awards">Awards</string>
    <string name="metascore">Metascore</string>
    <string name="imdb_votes">Imdb Votes</string>
</resources>
